--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 	"homepage": "https://github.com/frank-mendez/MaxNodeJS#readme",
 	"devDependencies": {
 		"nodemon": "^2.0.6"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
 	}
 }
